# mcp-server-check

./: .gitignore  CLI.md  LICENSE  README.md  pyproject.toml
example-skills/: README.md
example-skills/payroll-audit-report/: SKILL.md
example-skills/prior-provider-worker-migration/: SKILL.md
example-skills/prior-provider-worker-migration/references/: multiline-cell.md  pdf-details.md  pdf-list.md  tabular.md
example-skills/worker-census-report/: SKILL.md
src/mcp_server_check/: helpers.py  server.py  tool_factory.py  tool_filter.py  tool_index.py  types.py
src/mcp_server_check/cli/: __init__.py  codegen.py  context.py  output.py  setup.py
src/mcp_server_check/tools/: __init__.py  bank_accounts.py  companies.py  compensation.py  components.py  contractor_payments.py  contractors.py  documents.py  employees.py  external_payrolls.py  forms.py  payments.py  payroll_items.py  tax.py  (+5 more)
tests/: conftest.py  test_bank_accounts.py  test_cli.py  test_cli_codegen.py  test_cli_setup.py  test_companies.py  test_compensation.py  test_components.py  test_contractor_payments.py  test_contractors.py  test_documents.py  test_employees.py  test_external_payrolls.py  test_helpers.py  test_payments.py  test_payroll_items.py  test_payrolls.py  test_platform.py  test_server.py  test_tax.py  test_tool_factory.py  test_tool_filter.py  test_tool_index.py  test_webhooks.py  test_workflows.py
ts/: package-lock.json  package.json  tsconfig.json  wrangler.toml
ts/src/: env.ts  helpers.ts  index.ts  server.ts  stdio.ts  tool-filter.ts
ts/test/: helpers.test.ts  tool-filter.test.ts
(+20 files in other folders)
